Edit Profile and Fix UI post detail

--- a/src/app/screen/main/posts/postdetail/postdetail.component.html
+++ b/src/app/screen/main/posts/postdetail/postdetail.component.html
@@ -4,7 +4,8 @@
     <div class="post__content">
       <div class="post__medias">
         <div class="post__media bg-gray-100">
-          <img style="object-fit: contain; margin: auto; height: 100%" src="{{ postItem.photo }}" alt="Post Content" />
+          <img style="object-fit: contain; margin: auto; height: 500px; width: 100%;" src="{{ postItem.photo }}"
+            alt="Post Content" />
         </div>
       </div>
 
