--- a/src/app/screen/main/posts/posts.component.html
+++ b/src/app/screen/main/posts/posts.component.html
@@ -91,7 +91,7 @@
               {{ post.createdAt | timeDistance: post.createdAt }}
             </span>
           </div>
-
+          <app-list-comment  [itemPost]="post" ></app-list-comment>
           <app-comment [itemPost]="post"></app-comment>
         </div>
       </div>
