--- a/src/app/screen/main/posts/like-by-user/like-by-user.component.html
+++ b/src/app/screen/main/posts/like-by-user/like-by-user.component.html
@@ -24,10 +24,10 @@
     <div class="box__like">
       <div class="list_numberlike">
         <div class="information">
-          <div class="flex justify-between items-center">
-            <a routerLink="/profile/" class="flex items-center">
+          <div class="flex justify-between items-center" *ngFor="let user of userLike">
+            <a routerLink="" class="flex items-center">
               <img class="w-12 h-12 rounded-full" src="assets/default-user.png" alt="User Picture" />
-              <span style="color: rgb(48, 48, 48); font-weight: 600;" class="ml-4">Duc Anh</span>
+              <span style="color: rgb(48, 48, 48); font-weight: 600;" class="ml-4">{{user.name}}</span>
             </a>
 
             <button class="people_like-button btn btn-primary">
