--- a/src/app/screen/main/posts/like-by-user/like-by-user.component.html
+++ b/src/app/screen/main/posts/like-by-user/like-by-user.component.html
@@ -1,6 +1,6 @@
 <span *ngIf="textLike">
   Liked by
-  <span class="post__name--underline cursor-pointer" (click)="listLike($event)">
+  <span class="post__name--underline cursor-pointer" (click)="listLike()">
     {{ textLike }}
   </span>
 </span>
